--- a/notebooks/Function to express power sets.ipynb
+++ b/notebooks/Function to express power sets.ipynb
@@ -12,6 +12,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a function that generates the power set given a set of values.\n",
+    "\n",
+    "For example, if you're given the following set:\n",
+    "\n",
+    "set = {1, 2, 3}\n",
+    "Your function should the corresponding power set (note this can be a formatted as a list of lists):\n",
+    "\n",
+    "power set = [[], [1], [2], [1, 2], [3], [1, 3], [2, 3], [1, 2, 3]]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
